# euv-app

./: .gitignore  app.config.json  build.ps1  build.sh  euv-release-cached.apk.idsig  gen_android_icons.py  gen_icons.py  gen_icons2.py  keystore.jks  package-lock.json  package.json
scripts/: apply-config.js  gen-icons.py  prefetch-cache.js  setup-sdk.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bundled-cache/: _manifest.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml  load-cached-resource.toml  resolve-bridge-group-permissions.toml  update-cache.toml
src-tauri/src/: lib.rs  macros.rs  main.rs
src-tauri/src/bridge/: const.rs  enum.rs  fn.rs  impl.rs  mod.rs
src-tauri/src/cache/: bundled.rs  const.rs  enum.rs  fn.rs  impl.rs  mod.rs  static.rs  struct.rs  type.rs
src-tauri/src/log/: macros.rs
