[package]
name = "euv-app"
version = "0.1.0"
description = "euv-app"
edition = "2024"

[lib]
name = "euv_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
serde_json = "1.0.150"
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
log = "0.4.33"
http = "1.4.1"
lombok-macros = "2.0.31"
percent-encoding = "2.3.2"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2"
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
    "time",
    "fs",
], default-features = false }
reqwest = { version = "=0.12.28", features = [
    "rustls-tls-webpki-roots",
    "gzip",
], default-features = false }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "symbols"
